2011-06-14  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-backend.lisp (call-with-io-timeout): New DEFINTERFACE.
	* swank-sbcl.lisp (call-with-io-timeout): DEFIMPLEMENTATION for it.
	* swank.lisp (auto-flush-loop): Call FINISH-OUTPUT using
	CALL-WITH-IO-TIMEOUT to prevent deadlocks.

	* swank.lisp (macro-indentation): Fix handling of lambda-list
	keywords other than &rest and &body.

	* slime.el (slime-update-system-indentation): Remove stale specs
	from common-lisp-system-indentation when new one arrives.

2011-06-10  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank.lisp (macro-indentation): Walk the lambda-list
	to construct a better indentation spec instead of just
	looking for &BODY.

2011-06-09  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-sbcl.lisp (execv): Stupid SBCL hackers breaking backwards
	compatibility again: SB-POSIX:SYSCALL-ERROR has a required
	argument in 1.0.49, but accepts no arguments in older ones. Use
	plain ERROR instead.

	Support for per-package derived indentation, when
	slime-indentation is used.

	* swank.lisp (update-indentation/delta-for-emacs): Tell Emacs
	which packages the symbol is available in. Unless
	slime-indentation is used, this information is just dropped on the
	floor.

	* slime.el (slime-update-system-indentation): New function. Use
	this to inform indentation about derived specs when
	`common-lisp-system-indentation' is bound.
	(slime-handle-indentation-update): Adjust to support per-package
	derived indentation specs when slime-indentation is available.

2011-05-27  Helmut Eller  <heller@common-lisp.net>

	Fix "wrong number of args" problem with slime-inspector-quit.
	Reported by Anton Kovalenko.

	* slime.el (slime-popup-buffer-quit-function)
	(slime-quit-threads-buffer): Drop the kill-buffer-p argument.

2011-05-24  Helmut Eller  <heller@common-lisp.net>

	* slime.el (destructure-case): Fix "`_' not left unused" warnings.
	Insert an (ignore) form for empty bodies; this inhibts the